--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
     "react_ujs": "^2.6.1",
+    "reactstrap": "^9.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
@@ -22,3 +23,4 @@
     "webpack-dev-server": "^3"
   }
 }
+
